--- a/python_19_funksiya.ipynb
+++ b/python_19_funksiya.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWwTiL4JjjK0doZx3n842K",
+      "authorship_tag": "ABX9TyOoGHVjZr+z0BNmd7Gkw3qH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,9 +46,7 @@
         "def salom_ber(ism):\n",
         "  \"\"\" Foydalanuvchidan ismini so'rab,\n",
         "  o'sha ismga salom beruvchi funksiya \"\"\"\n",
-        "  print(f\"Assalomu alaykum, hurmatli {ism.title()}!\")\n",
-        "\n",
-        "salom_ber(\"olim\")"
+        "  print(f\"Assalomu alaykum, hurmatli {ism.title()}!\")\n"
       ],
       "metadata": {
         "id": "NOq0vs5-gBgN"
@@ -58,9 +56,48 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print(salom_ber.__doc__)"
+      ],
+      "metadata": {
+        "id": "S_4688uNJDTv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def toliq_ism(ism, familiya):\n",
+        "  \"\"\"Foydalanuvchining ism va familiyasini jamlab chiqaruvchi dastur.\"\"\"\n",
+        "  print(f\"Foydalanuvchining ismi: {ism.title()}\\n\"\n",
+        "        f\"Foydalanuvchining familiyasi: {familiya.title()}\")\n",
+        "toliq_ism('olim','hakimov')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nFw8WHhSJMmL",
+        "outputId": "46fc6ce3-e637-44e0-bb4b-7572b26ff78d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Foydalanuvchining ismi: Olim\n",
+            "Foydalanuvchining familiyasi: Hakimov\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "w9MNDhrTiHKb"
+        "id": "jQBGTOGBKyvs"
       },
       "execution_count": null,
       "outputs": []
